# atac-snapshots

./: CHANGES  MANIFEST  Makefile  README  README-TOO  Version  aclocal.m4  atac-tutorial.ps  atac.1  atac.lsm  atacCC.1  atacLD.1  ataclib.1  atacmin.1  atacterm.h  atactm.1  config_h.in  configure  configure.in  makefile.in  mkdirs.sh  portable.h  version.h
atac_cpp/: Makefile  alloca.c  cccp.c  cexp.y  config.h  descrip.mms  makefile.in  mvs_libget.c  obstack.c  obstack.h  sio.c  tm.h  version.c  vms_lbr.c
atac_i/: Makefile  Pgram.y  alldu.c  allpaths.c  allpaths.h  atac_i.c  atac_i.h  bitvec.h  const.c  deparse.c  deparse.h  descrip.mms  dug.c  dug.h  error.c  error.h  fg_expr.c  fg_module.c  fg_stmt.c  filestamp.c  flowgraph.h  hook.h  list.c  list.h  makefile.in  mark.c  parser.c  paths.c  print_sym.c  reglist.c  reglist.h  scan.c  scan.h  srcpos.c  srcpos.h  strtab.c  strtab.h  sym.c  sym.h  table.c  (+8 more)
atacysis/: Makefile  atac_to_bin.c  atactm.c  atacysis.h  bdisp.c  cdisp.c  columns.c  ddisp.c  descrip.mms  disp.c  disp.h  dump.c  error.c  eval.c  fdisp.c  gmatch.c  greedy.c  highest.c  init.c  lib.c  main.c  makefile.in  man.h  mem.c  pack.c  pack.h  pat_match.c  pdisp.c  prev.c  print.c  pro.c  ramfile.h  risk.c  rlist.c  rlist.h  srcfile_name.c  static.c  summary.c  tab_disp.c  tmerror.c  (+3 more)
changes/: atac_19951230.txt  atac_19961112.txt  atac_19970511.txt  atac_19971211.txt  atac_19980823.txt  atac_19980919.txt  atac_20050814.txt  atac_20070211.txt
tools/: Makefile  atac  atacCC  atacLD  atac_rt.c  atacmin  hili.c  loguse  makefile.in  min.c  predefs.list
tutorial/: Makefile  input1  input2  input3  main.c  makefile.in  wc.c
